Add username + password authentication (#160)
* Test 2fa

* WIP login api

* Start on login route

* Add qr image generator

* Finish up login route and add stubs for signing up and 2fa

* Add hashed_password column to db

* Implement extra 2fa methods

* Rename service

* Start on signup dto

* document SignupDto

* Add signup route

* Add issuer to jwt util

* Add the ability to remove 2fa

* Add mail settings

* Add template renderer for emais

* cleanup email service

* Fix JWT verification and add refresh endpoint

* That makes the code a bit nicer

* Mappers are pretty sexy

* MFA WORKS

* Move application logic to service

* Implement new security chain

* Remove auth for languages and pronouns

* Do some more stuff for email verification

* Add email verification table

Hide hashed password and mf2 secret from public (whoops)

* Add route for re-sending verification email

* WIP password resetting

* Don't ask

* Allow for password resets

* Cleanup